# stock-lab

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  test_chips_spec7.py  test_corporate_actions_spec9.py  test_daily_price_spec6.py  test_ingestion_integration.py  test_ingestion_spec11.py  test_notifier_spec5.py
backend/alembic/: env.py
backend/alembic/versions/: ade484fabe6f_initial_schema.py
backend/app/: config.py  main.py
backend/app/adapters/: __init__.py  base.py  broker_branch.py  chips.py  corporate_actions.py  daily_price.py  registry.py
backend/app/ingestion/: __init__.py  pipeline.py  scheduler.py
backend/app/models/: __init__.py  base.py  broker_branch_trade.py  chip.py  corporate_action.py  daily_price.py  security.py  user.py
backend/app/notifications/: __init__.py  base.py  log_notifier.py  telegram_notifier.py
backend/app/pricing/: __init__.py  adjustment.py
backend/stock_lab_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: design.md  frontend-plan.md
orchestrator/: intake-analysis.md  intake-review-map.md  intake-tasks.md  intake-verification-map.md  manifest.json  requirement.md  review-spec-1.md  review-spec-10.md  review-spec-11.md  review-spec-12.md  review-spec-2.md  review-spec-3.md  review-spec-4.md  review-spec-6.md  review-spec-7.md  review-spec-8.md  review-spec-9.md
