[project]
name = "stock-lab-backend"
version = "0.1.0"
description = "stock-lab 後端：FastAPI API + ingestion pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "pydantic-settings>=2.5",
    "pytest>=8.3",
    "ddddocr",
    "beautifulsoup4",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
